Enable the card-floating effect in transaction and historic-registration workspaces

--- a/src/app/views/land-controls/file-viewer/file-viewer.component.html
+++ b/src/app/views/land-controls/file-viewer/file-viewer.component.html
@@ -1,8 +1,8 @@
 <div [style.height.%]="100"
-  [ngClass.gt-md]="{'card-floating-container': cardOnTopEffect}">
+  [ngClass.gt-md]="{'card-floating-container': cardFloatingEffect}">
 
   <div class="card card-border card-shadow"
-    [ngClass.gt-md]="{'card-floating-primary': cardOnTopEffect}">
+    [ngClass.gt-md]="{'card-floating-primary': cardFloatingEffect}">
 
     <div class="card-header card-header-flat">
 
