--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -44,6 +44,7 @@
 
     <emp-land-registry-entry-editor
       [data]="selectedRegistryEntryData"
+      [cardFloatingEffect]="true"
       (registryEntryEditorEvent)="onRegistryEntryEditorEvent($event)">
 
     </emp-land-registry-entry-editor>
