--- a/src/app/views/tools/recordable-subjects-search-tool.component.html
+++ b/src/app/views/tools/recordable-subjects-search-tool.component.html
@@ -1,3 +1,3 @@
-<emp-land-recordable-subjects-searcher>
+<emp-land-record-search>
 
-</emp-land-recordable-subjects-searcher>
+</emp-land-record-search>
