Add 'Unit.Fraction' to PartUnit (party-editor)

--- a/src/app/views/recordable-subjects/parties/party-editor.component.html
+++ b/src/app/views/recordable-subjects/parties/party-editor.component.html
@@ -73,8 +73,13 @@
 
           <div fxFlex="20" *ngIf="validatePartUnitUIDWithAmount(partUnitUID.value)">
             <label>Cantidad:</label>
-            <input formControlName="partAmount"
+            <input formControlName="partAmount" *ngIf="!isPartAmountFraction"
               type="number"
+              class="text-box"
+              [class.invalid-control]="partAmount.touched && partAmount.errors">
+            <input formControlName="partAmount" *ngIf="isPartAmountFraction"
+              empNgFraction
+              type="text"
               class="text-box"
               [class.invalid-control]="partAmount.touched && partAmount.errors">
           </div>
