Change some labels according to user's feedback

--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -187,7 +187,7 @@
 
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex>
-        <label>Descripción:</label>
+        <label>Descripción del instrumento:</label>
         <emp-ng-text-editor [formControlName]="controls.summary">
         </emp-ng-text-editor>
       </div>
