--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -75,7 +75,7 @@
 
       <div fxFlex>
 
-        <label>Descripción del acto jurídico:</label>
+        <label>Descripción o cláusulas del acto jurídico:</label>
 
         <textarea class="text-area" empNgTextareaAutoresize [maxHeightTextarea]="null" rows="1"
           [formControlName]="controls.description"
