--- a/src/app/views/search-services/record-search/record-search.component.html
+++ b/src/app/views/search-services/record-search/record-search.component.html
@@ -7,7 +7,7 @@
       <div class="card-header card-header-flat">
 
         <div class="card-title">
-          Búsqueda de registros
+          Búsqueda universal
 
           <div class="card-hint" empNgProgressText
             loadingText="Cargando"
