--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -9,7 +9,7 @@
     </ng-container>
     <ng-container matColumnDef="recordingTime">
       <th mat-header-cell *matHeaderCellDef> Fecha de registro </th>
-      <td mat-cell *matCellDef="let row">  {{ row.recordingTime | dateTimeFormat: 'DMY' }} </td>
+      <td mat-cell *matCellDef="let row">  {{ row.authorizationDate | dateTimeFormat: 'DMY' }} </td>
     </ng-container>
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef> Estado </th>
