--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -1,6 +1,4 @@
-<div class="scrollable-container mat-elevation-z1" [style.margin.px]="3">
-
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table [dataSource]="dataSource" [style.padding]="'0 3px'" [style.margin]="0">
     <ng-container matColumnDef="recordingNo">
       <th mat-header-cell *matHeaderCellDef> Inscripción </th>
       <td mat-cell *matCellDef="let row"> {{ row.recordingNo }} </td>
@@ -48,7 +46,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
       [ngClass]="{'row-selected': bookEntrySelected.uid === row.uid}"></tr>
   </table>
@@ -56,5 +54,3 @@
   <div *ngIf="dataSource?.data.length === 0" class="text-not-found">
     <p>No se encontraron registros.</p>
   </div>
-
-</div>
