--- a/src/app/views/registration/recording-book/recording-book-edition.component.html
+++ b/src/app/views/registration/recording-book/recording-book-edition.component.html
@@ -23,15 +23,14 @@
 
       </emp-ng-spinner>
 
-      <div class="list-selection-header" fxFlex="none">
 
-        <emp-land-recording-book-selector
-          [showRecordingBookEntryField]="false"
-          (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
+      <emp-land-recording-book-selector fxFlex="none" class="list-selection-header"
+        [showRecordingBookEntryField]="false"
+        [style.marginBottom.px]="4"
+        (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
 
-        </emp-land-recording-book-selector>
+      </emp-land-recording-book-selector>
 
-      </div>
 
       <div fxFlex style="overflow-y: auto;">
 
@@ -40,16 +39,13 @@
           [config]="{textButtonOpen: 'Agregar una inscripción a este volumen',
                     textButtonClose: 'Cancelar agregar registro'}" class="no-margin">
 
-          <ng-container *ngIf="panelAddState">
+          <emp-land-book-entry-editor *ngIf="panelAddState"
+            (bookEntryEditorEvent)="onBookEntryEditorEvent($event)">
 
-            <emp-land-book-entry-editor
-              (bookEntryEditorEvent)="onBookEntryEditorEvent($event)">
-
-            </emp-land-book-entry-editor>
-
-          </ng-container>
+          </emp-land-book-entry-editor>
 
         </emp-ng-expansion-button>
+
 
         <emp-land-book-entry-list
           [recordingBook]="selectedRecordingBook"
