Include description field in amendable acts list

--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -95,12 +95,14 @@
               <ng-template #labelTemplate let-item="item">
                 {{item.name}}
                 {{item.recordingData.recordingTime ? ', ' + ( item.recordingData.recordingTime | dateTimeFormat ) : ''}}
+                {{item.description ? ', ' + item.description : ''}}
                 {{item.recordingData.recordID ? ', ' + item.recordingData.recordID : ''}}
               </ng-template>
 
               <ng-template #optionTemplate let-item="item">
                 {{item.name}}
                 {{item.recordingData.recordingTime ? ', ' + ( item.recordingData.recordingTime | dateTimeFormat ) : ''}}
+                {{item.description ? ', ' + item.description : ''}}
                 {{item.recordingData.recordID ? ', ' + item.recordingData.recordID : ''}}
               </ng-template>
 
