--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -34,6 +34,12 @@
   &.icon-error:hover {
     color: $icon-color-error;
   }
+
+  &.mat-icon-sm {
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+  }
 }
 
 a,
@@ -94,7 +100,7 @@ a,
 }
 
 .mat-ink-bar {
-  background-color: $title-color  !important;
+  background-color: $title-color !important;
 }
 
 .mat-tab-group .mat-tab-body {
@@ -545,7 +551,7 @@ table.mat-table {
 }
 
 .invalid-date-picker .mat-date-range-input-container {
-  border-left: 5px solid $warning-color  !important;
+  border-left: 5px solid $warning-color !important;
 }
 
 //
@@ -572,7 +578,7 @@ table.mat-table {
 }
 
 .mat-progress-bar-fill::after {
-  background-color: $primary-color-light  !important;
+  background-color: $primary-color-light !important;
 }
 
 //
@@ -604,7 +610,7 @@ table.mat-table {
 
 .mat-checkbox {
   .mat-checkbox-frame {
-    background: $white  !important;
+    background: $white !important;
   }
 
   .mat-checkbox-label {
@@ -619,7 +625,7 @@ table.mat-table {
   &.mat-checkbox-checked,
   &.mat-checkbox-indeterminate {
     .mat-checkbox-background {
-      background-color: $checkbox-background-color  !important;
+      background-color: $checkbox-background-color !important;
     }
 
     &.mat-checkbox-disabled {
@@ -643,7 +649,7 @@ table.mat-table {
   &.mat-checkbox-checked,
   &.mat-checkbox-indeterminate {
     .mat-checkbox-background {
-      background-color: $checkbox-warning-background-color  !important;
+      background-color: $checkbox-warning-background-color !important;
     }
   }
 
@@ -677,7 +683,7 @@ table.mat-table {
 }
 
 .mat-radio-button.mat-radio-checked .mat-radio-outer-circle {
-  border-color: $checkbox-background-color  !important;
+  border-color: $checkbox-background-color !important;
 }
 
 .mat-radio-button.mat-radio-disabled .mat-radio-label-content {
@@ -685,8 +691,8 @@ table.mat-table {
 }
 
 .mat-radio-button .mat-radio-inner-circle {
-  color: $checkbox-background-color  !important;
-  background-color: $checkbox-background-color  !important;
+  color: $checkbox-background-color !important;
+  background-color: $checkbox-background-color !important;
 }
 
 //
@@ -705,11 +711,11 @@ table.mat-table {
 
 .mat-checkbox-ripple .mat-ripple-element,
 .mat-radio-ripple .mat-ripple-element {
-  background: $checkbox-background-color  !important;
+  background: $checkbox-background-color !important;
 }
 
 .mat-checkbox.mat-checkbox-warning .mat-checkbox-ripple > .mat-ripple-element {
-  background: $checkbox-warning-background-color  !important;
+  background: $checkbox-warning-background-color !important;
 }
 
 //
