--- a/src/app/views/registration/recording-book/recording-book-edition.component.html
+++ b/src/app/views/registration/recording-book/recording-book-edition.component.html
@@ -26,6 +26,7 @@
 
       <emp-land-recording-book-selector fxFlex="none" class="list-selection-header"
         [showRecordingBookEntryField]="false"
+        [fieldsRequired]="false"
         [style.marginBottom.px]="4"
         (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
 
